--- a/OpenEugene.Module.LittleHelpBook/Client/_Imports.razor
+++ b/OpenEugene.Module.LittleHelpBook/Client/_Imports.razor
@@ -24,3 +24,7 @@
 @using Oqtane.Interfaces
 
 @using MudBlazor
+@using Models = OpenEugene.Module.LittleHelpBook.Models;
+@using M = OpenEugene.Module.LittleHelpBook.Models;
+@using OpenEugene.Module.LittleHelpBook.Shared;
+@using OpenEugene.Module.LittleHelpBook.ViewModels
